Open sans, spacing fix

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -12,6 +12,7 @@ h1, h2, h3, h4, h5, h6 {
 		li {
 			font-size: em-calc(11);
 			line-height: em-calc(14);
+			clear: both;
 			strong {
 				display: inline-block;
 				float:right;
